#1683: [Fix] Logged user and Logged group items no visible in filter reference fields

--- a/cmdbuild/src/main/webapp/stylesheets/cmdbuild.css
+++ b/cmdbuild/src/main/webapp/stylesheets/cmdbuild.css
@@ -21,11 +21,6 @@ body {
 
 em { font-style: oblique !important; }
 
-.cm-calculated-field {
-	color: green;
-	background-color: #f0fff0;
-}
-
 .cmdb-tab p {
 	color: #15428B;
 	background-image: url("../images/tabs/pressedbg.png");
